@@ -576,6 +576,7 @@ AbstractTaskFactory::GetOrderedTaskSettings() const
 void
 AbstractTaskFactory::UpdateOrderedTaskSettings(OrderedTaskSettings &to)
 {
+  to.start_constraints.require_arm = constraints.start_requires_arm;
   to.finish_constraints.fai_finish = constraints.fai_finish;
 }
 
